<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name" tools:ignore="Typos" translatable="false">Man Man</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="explain">Explain</string>
    <string name="enter_query">Enter query…</string>
    <string name="content">Content</string>
    <string name="connection_error">Connection error</string>
    <string name="placeholder_text">Placeholder Text</string>
    <string name="request_description">Request description</string>
    <string name="contents">Contents</string>
    <string name="cached">Cached</string>
    <string name="to_contents">To contents</string>
    <string name="back_icon">back icon</string>
    <string name="database_save_error">Database saving error</string>
    <string name="long_load_warn">Initial fill can take some time, please be patient</string>
    <string name="database_retrieve_error">Cannot retrieve data from database</string>
    <string name="cache_search">Filter cache…</string>
    <string name="app_description">Man Man is a free (as in freedom) tool for man page search, load and save</string>
    <string name="app_author"><![CDATA[Author: Oleg Chernovskiy <kanedias@gmx.net>]]></string>
    <string name="app_credits"><![CDATA[Credits: All remote content is being loaded from www.mankier.com, author is Jackson Pauls <jackson@mankier.com>]]></string>
    <string name="app_license">
        <![CDATA[
            Copyright © 2014–2021 Oleg `Kanedias` Chernovskiy
            This program is free software: you can redistribute it and/or modify it under the terms of the
            GNU General Public License as published by the Free Software Foundation, either version 3 of the License,
            or (at your option) any later version. This program is distributed in the hope that it will be useful,
            but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
            FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.

            You should have received a copy of the GNU General Public License along with this program.
            If not, see <http://www.gnu.org/licenses/>.
        ]]>
    </string>
    <string name="about">About</string>
    <string name="donate">Donate…</string>
    <string name="completed">Completed!</string>
    <string name="thanks_for_pledge">Thanks for your pledge!</string>
    <string name="loading">Loading…</string>
    <string name="general_settings">General settings</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_sum">Clears all cached pages and chapters. It helps to decrease application data usage</string>
    <string name="confirm_action">Confirm action</string>
    <string name="clear_cache_question">Are you sure? This will delete all the cached data including pages and chapters!</string>
    <string name="settings">Settings</string>
    <string name="popup_menu">Popup menu</string>
    <string name="copy_link">Copy link</string>
    <string name="share_link">Share link…</string>
    <string name="copied">Copied:</string>
    <string name="delete">Delete</string>
    <string name="filter_local_storage">Filter local storage…</string>
    <string name="no_folders_in_local_storage">No *.gz files in search path</string>
    <string name="app_theme">Theme</string>
    <string name="app_theme_summary">Theme applies after application restart</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="green_theme">Scr1pt Kiddie</string>
    <string name="local_storage">Local</string>
    <string name="watched_folders">Watched folders</string>
    <string name="select_folder">Select folder to pick</string>
    <string name="select">Select</string>
    <string name="current_folder">Current folder:</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="file_not_found">File not found</string>
    <string name="file_not_found_extra">File not found: %s</string>
    <string name="wrong_file_format">Wrong file format</string>
    <string name="scanning_folders">Scanning folders…</string>
    <string name="find_next">Find next</string>
    <string name="find_previous">Find previous</string>
    <string name="close_search">Close search bar</string>
    <string name="download_archive">Download archive (35MB)</string>
    <string name="downloading">Downloading…</string>
    <string name="no_archive_on_server">No archive found on server! Please create issue on development page!</string>
    <string name="please_wait">Please wait…</string>
    <string name="error_parsing_local_archive">Error while parsing local archive!</string>
    <string name="already_downloaded">Already downloaded!</string>
    <string name="confirm_action_load_archive">The archive is 35 MiB. Please confirm download.</string>
    <string name="delete_local_archive">Delete downloaded local archive</string>
    <string name="delete_local_archive_sum">Deletes downloaded archive permanently (but none of your locally added pages from sdcard will be affected). This may be helpful if you want to reduce this app private size.</string>
    <string name="deleted">Deleted!</string>
    <string name="default_tab">Default tab</string>
    <string name="default_tab_summary">Default tab on application start</string>
    <string name="select_command">Select command</string>
    <string name="invalid_font_size_set">Invalid font size number was set in properties</string>
    <string name="webview_font_size">Minimal font size on man pages</string>
    <string name="webview_font_size_sum">Minimal font size on web forms with full man page content</string>
</resources>
