<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto">

    <Preference
        android:icon="@drawable/trash_outlined"
        android:key="clear.cache"
        android:title="@string/clear_cache"
        android:summary="@string/clear_cache_sum"/>

    <Preference
        android:icon="@drawable/trash_outlined"
        android:key="delete.local.archive"
        android:title="@string/delete_local_archive"
        android:summary="@string/delete_local_archive_sum"/>

    <EditTextPreference
        android:icon="@drawable/edit"
        android:defaultValue="12"
        android:digits="1234567890"
        android:key="webview.font.size"
        android:summary="@string/webview_font_size_sum"
        android:title="@string/webview_font_size"/>

    <ListPreference
        android:icon="@drawable/image"
        android:key="app.theme"
        android:title="@string/app_theme"
        android:summary="@string/app_theme_summary"
        android:entries="@array/preference_themes_titles"
        android:entryValues="@array/preference_themes_values" />

    <ListPreference
        android:icon="@drawable/eye"
        android:key="app.default.tab"
        android:title="@string/default_tab"
        android:summary="@string/default_tab_summary"
        android:entries="@array/preference_default_tab_entries"
        android:entryValues="@array/preference_default_tab_values" />

</PreferenceScreen>